# debug-browser

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-ROADMAP.md
.planning/phases/01-project-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-cdp-connection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  DISCOVERY.md
.planning/phases/03-react-devtools-hook/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-hook-state-inspection/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-claude-code-skill/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-automated-testing/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  (+1 more)
daemon/: package-lock.json  package.json  tsconfig.json
daemon/src/: actions.ts  browser.ts  daemon.ts  protocol.ts  types.ts
scripts/: install.sh  uninstall.sh
skill/: README.md  SKILL.md
skill/references/: commands.md  workflows.md
src/: commands.rs  connection.rs  error.rs  lib.rs  main.rs  output.rs
src/browser/: mod.rs
src/commands/: console.rs  inspect.rs  mod.rs  navigate.rs
src/inbox/: mod.rs
src/react/: mod.rs
tests/: run-tests.sh
tests/fixture/: index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
