[package]
name = "debug-browser"
version = "1.1.0"
edition = "2024"
description = "A Rust CLI for debugging React applications via headless browser with rich introspection capabilities"
license = "MIT"
repository = "https://github.com/sobelio/debug-browser"
readme = "README.md"

[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
libc = "0.2"
